syntax = "proto3";

import "google/api/annotations.proto";
import "validate/validate.proto";

package api.student.v1;

option go_package = "student/api/student/v1;v1";
/**
option java_multiple_files = true;
option java_package = "api.student.v1";
 */

service Student {
	rpc UpdateStudent (UpdateStudentRequest) returns (UpdateStudentReply);
	rpc DeleteStudent (DeleteStudentRequest) returns (DeleteStudentReply);
	rpc ListStudent (ListStudentRequest) returns (ListStudentReply);
	rpc GetStudent (GetStudentRequest) returns (GetStudentReply) {
		option (google.api.http) = {
			get: "/student/{id}",
		};
	}
	rpc CreateStudent (CreateStudentRequest) returns (CreateStudentReply) {
		option (google.api.http) = {
			post: "/student/user"
			body: "*"
		};
	}
}

message StudentInfo {
	string name   = 1;
	int32  status = 2;
	int32  id     = 3;
}

message CreateStudentRequest {
	string name = 1 [(validate.rules).string = {min_len : 5, max_len: 50}];
}
message CreateStudentReply {
	StudentInfo Student = 1;
}

message UpdateStudentRequest {}
message UpdateStudentReply {}

message DeleteStudentRequest {}
message DeleteStudentReply {}

message ListStudentRequest {}
message ListStudentReply {}

message GetStudentRequest {
	int32 id = 1;
}

message GetStudentReply {
	string name   = 1;
	int32  status = 2;
	int32  id     = 3;
}